# pylauncher

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
pylauncher/: __main__.py
scripts/: pylauncher
