[tool.poetry]
name = "pylauncher"
version = "0.1.0"
description = ""
authors = ["Rickyxrc <rickyxrc@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
survey = "^4.5.4"
simple-term-menu = "^1.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
